==> gsm988aa/embedded-and-hardware/applications/nRF24L04/AtollicTrueStudio/STM32F407VET6_nRF24L01/Libraries/nRF24L01.cpp <==
#include "nRF24L01.h"
#define MAX(x, y)(((x) > (y)) ? (x) : (y))
#define MIN(x, y)(((x) < (y)) ? (x) : (y))
#define _BOOL(x)(((x) > 0) ? 1 : 0)

void NRF24::csn(int state)
{
    if (state) HAL_GPIO_WritePin(nrf24_PORT, nrf24_CSN_PIN, GPIO_PIN_SET);
    else HAL_GPIO_WritePin(nrf24_PORT, nrf24_CSN_PIN, GPIO_PIN_RESET);
}

void NRF24::ce(int state)
{
    if (state) HAL_GPIO_WritePin(nrf24_PORT, nrf24_CE_PIN, GPIO_PIN_SET);
    else HAL_GPIO_WritePin(nrf24_PORT, nrf24_CE_PIN, GPIO_PIN_RESET);
}

uint8_t NRF24::read_register(uint8_t reg)
{
    uint8_t spiBuf[3];
    uint8_t retData;
    csn(0);
    spiBuf[0] = reg & 0x1F;
    HAL_SPI_Transmit(&nrf24_hspi, spiBuf, 1, 100);
    HAL_SPI_Receive(&nrf24_hspi, &spiBuf[1], 1, 100);
    retData = spiBuf[1];
    csn(1);
    return retData;
}

void NRF24::read_register(uint8_t reg, uint8_t * buf, uint8_t len)
{
    uint8_t spiBuf[3];
    csn(0);
    spiBuf[0] = reg & 0x1F;
    HAL_SPI_Transmit(&nrf24_hspi, spiBuf, 1, 100);
    HAL_SPI_Receive(&nrf24_hspi, buf, len, 100);
    csn(1);
}

void NRF24::write_register(uint8_t reg, uint8_t value)
{
    uint8_t spiBuf[3];
    csn(0);
    spiBuf[0] = reg | 0x20;
    spiBuf[1] = value;
    HAL_SPI_Transmit(&nrf24_hspi, spiBuf, 2, 100);
    csn(1);
}

void NRF24::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
    uint8_t spiBuf[3];
    csn(0);
    spiBuf[0] = reg | 0x20;
    HAL_SPI_Transmit(&nrf24_hspi, spiBuf, 1, 100);
    HAL_SPI_Transmit(&nrf24_hspi, (uint8_t*) buf, len, 100);
    csn(1);
}

void NRF24::write_payload(const uint8_t* buf, uint8_t len)
{
    uint8_t wrPayloadCmd;
    csn(0);
    wrPayloadCmd = CMD_W_TX_PAYLOAD;
    HAL_SPI_Transmit(&nrf24_hspi, &wrPayloadCmd, 1, 100);
    HAL_SPI_Transmit(&nrf24_hspi, (uint8_t*) buf, len, 100);
    csn(1);
}

void NRF24::read_payload(uint8_t* buf, uint8_t len)
{
    uint8_t cmdRxBuf;
    uint8_t data_len = MIN(len, getPayloadSize());
    csn(0);
    cmdRxBuf = CMD_R_RX_PAYLOAD;
    HAL_SPI_Transmit(&nrf24_hspi, &cmdRxBuf, 1, 100);
    HAL_SPI_Receive(&nrf24_hspi, buf, data_len, 100);
    csn(1);
}

void NRF24::flush_tx(void)
{
	this->write_register(CMD_FLUSH_TX, 0xFF);
}

void NRF24::flush_rx(void)
{
    this->write_register(CMD_FLUSH_RX, 0xFF);
}

uint8_t NRF24::get_status(void)
{
    uint8_t statReg;
    statReg = this->read_register(REG_STATUS);
    return statReg;
}

void NRF24::toggle_features(void)
{
    csn(0);
    HAL_SPI_Transmit(&nrf24_hspi, (uint8_t*)CMD_ACTIVATE, 1, 100);
    HAL_SPI_Transmit(&nrf24_hspi, (uint8_t*)0x73, 1, 100);
    csn(1);
}

bool NRF24::begin(GPIO_TypeDef* nrf24PORT, uint16_t nrfCSN_Pin, uint16_t nrfCE_Pin, SPI_HandleTypeDef nrfSPI)
{
	uint8_t setup = 0;
	uint8_t pipeAddrVar[6];
    memcpy(&nrf24_hspi, &nrfSPI, sizeof(nrfSPI));
    nrf24_PORT = nrf24PORT;
    nrf24_CSN_PIN = nrfCSN_Pin;
    nrf24_CE_PIN = nrfCE_Pin;
    csn(1);
    ce(0);
    dl->delay_ms(5);
    this->write_register(REG_CONFIG, 0x08);
    this->write_register(REG_EN_AA, 0x3f);
    this->write_register(REG_EN_RXADDR, 0x03);
    this->write_register(REG_SETUP_AW, 0x03);
    this->write_register(REG_SETUP_RETR, 0x03);
    this->write_register(REG_RF_CH, 0x02);
    this->write_register(REG_RF_SETUP, 0x0f);
    this->write_register(REG_STATUS, 0x0e);
    this->write_register(REG_OBSERVE_TX, 0x00);
    this->write_register(REG_CD, 0x00);
    pipeAddrVar[4]=0xE7; pipeAddrVar[3]=0xE7; pipeAddrVar[2]=0xE7; pipeAddrVar[1]=0xE7; pipeAddrVar[0]=0xE7;
    this->write_register(REG_RX_ADDR_P0, pipeAddrVar, 5);
    pipeAddrVar[4]=0xC2; pipeAddrVar[3]=0xC2; pipeAddrVar[2]=0xC2; pipeAddrVar[1]=0xC2; pipeAddrVar[0]=0xC2;
    this->write_register(REG_RX_ADDR_P1, pipeAddrVar, 5);
    this->write_register(REG_RX_ADDR_P2, 0xC3);
    this->write_register(REG_RX_ADDR_P3, 0xC4);
    this->write_register(REG_RX_ADDR_P4, 0xC5);
    this->write_register(REG_RX_ADDR_P5, 0xC6);
    pipeAddrVar[4]=0xE7; pipeAddrVar[3]=0xE7; pipeAddrVar[2]=0xE7; pipeAddrVar[1]=0xE7; pipeAddrVar[0]=0xE7;
    this->write_register(REG_TX_ADDR, pipeAddrVar, 5);
    this->write_register(REG_RX_PW_P0, 0);
    this->write_register(REG_RX_PW_P1, 0);
    this->write_register(REG_RX_PW_P2, 0);
    this->write_register(REG_RX_PW_P3, 0);
    this->write_register(REG_RX_PW_P4, 0);
    this->write_register(REG_RX_PW_P5, 0);
    this->toggle_features();
    this->write_register(REG_FEATURE, 0);
    this->write_register(REG_DYNPD, 0);
    this->setCRCLength(RF24_CRC_16);
    this->setRetries(5, 15);
    if(this->setDataRate(RF24_250KBPS))p_variant = true;
    setup = this->read_register(REG_RF_SETUP);
    this->setDataRate(RF24_1MBPS);
    dynamic_payloads_enabled = false;
    this->write_register(REG_STATUS, _BV(BIT_RX_DR)|_BV(BIT_TX_DS)|_BV(BIT_MAX_RT));
    this->setPayloadSize(32);
    this->setChannel(76);
    this->flush_tx();
    this->flush_rx();
    this->powerUp();
    this->write_register(REG_CONFIG, (this->read_register(REG_CONFIG))&(~_BV(BIT_PRIM_RX)));
    return ((setup != 0)&&(setup != 0xff));
}

void NRF24::startListening(void)
{
    write_register(REG_CONFIG, read_register(REG_CONFIG)|_BV(BIT_PRIM_RX));
    write_register(REG_STATUS, _BV(BIT_RX_DR)|_BV(BIT_TX_DS)|_BV(BIT_MAX_RT));
    if(pipe0_reading_address)write_register(REG_RX_ADDR_P0, (uint8_t*)(&pipe0_reading_address), 5);
    flush_tx();
    flush_rx();
    ce(1);
    dl->delay_us(150);
}

bool NRF24::available(void)
{
    return availablePipe(NULL);
}

bool NRF24::read(uint8_t* buf, uint8_t len)
{
    read_payload(buf, len);
    uint8_t rxStatus = read_register(REG_FIFO_STATUS)&_BV(BIT_RX_EMPTY);
    flush_rx();
    getDynamicPayloadSize();
    return rxStatus;
}

void NRF24::openWritingPipe(uint64_t address)
{
    write_register(REG_RX_ADDR_P0, (uint8_t*)(&address), 5);
    write_register(REG_TX_ADDR, (uint8_t*)(&address), 5);
    write_register(REG_RX_PW_P0, MIN(payload_size, MAX_PAYLOAD_SIZE));
}

void NRF24::openReadingPipe(uint8_t number, uint64_t address)
{
    if(number == 0)pipe0_reading_address = address;
    if(number <= 6)
    {
        if(number < 2)write_register(NRF24_ADDR_REGS[number], (uint8_t*)(&address), 5);
        else write_register(NRF24_ADDR_REGS[number], (uint8_t*)(&address), 1);
        write_register(RF24_RX_PW_PIPE[number], payload_size);
        write_register(REG_EN_RXADDR, read_register(REG_EN_RXADDR)|_BV(number));
    }
}

void NRF24::setRetries(uint8_t delay, uint8_t count)
{
    write_register(REG_SETUP_RETR, ((delay&0xf)<<BIT_ARD)|((count&0xf)<<BIT_ARC));
}

void NRF24::setChannel(uint8_t channel)
{
    write_register(REG_RF_CH, MIN(channel, MAX_CHANNEL));
}

uint8_t NRF24::getDynamicPayloadSize(void)
{
    return read_register(CMD_R_RX_PL_WID);
}

void NRF24::enableAckPayload(void)
{
    write_register(REG_FEATURE, read_register(REG_FEATURE)|_BV(BIT_EN_ACK_PAY)|_BV(BIT_EN_DPL));
    if (!read_register(REG_FEATURE))
    {
        toggle_features();
        write_register(REG_FEATURE, read_register(REG_FEATURE)|_BV(BIT_EN_ACK_PAY)|_BV(BIT_EN_DPL));
    }
    write_register(REG_DYNPD, read_register(REG_DYNPD)|_BV(BIT_DPL_P1)|_BV(BIT_DPL_P0));
}

void NRF24::enableDynamicPayloads(void)
{
    write_register(REG_FEATURE, read_register(REG_FEATURE)|_BV(BIT_EN_DPL));
    if(!read_register(REG_FEATURE))
    {
        toggle_features();
        write_register(REG_FEATURE, read_register(REG_FEATURE)|_BV(BIT_EN_DPL));
    }
    write_register(REG_DYNPD, read_register(REG_DYNPD)|_BV(BIT_DPL_P5)|_BV(BIT_DPL_P4)|_BV(BIT_DPL_P3)|_BV(BIT_DPL_P2)|_BV(BIT_DPL_P1)|_BV(BIT_DPL_P0));
    dynamic_payloads_enabled = true;
}

void NRF24::setAutoAck(bool enable)
{
    if(enable)write_register(REG_EN_AA, 0x3F);
    else write_register(REG_EN_AA, 0x00);
}

void NRF24::setCRCLength(rf24_crclength_e length)
{
    uint8_t config = read_register(REG_CONFIG)&(~(_BV(BIT_CRCO)|_BV(BIT_EN_CRC)));
    if(length == RF24_CRC_8)config |= _BV(BIT_EN_CRC);
    else
    {
        config |= _BV(BIT_EN_CRC);
        config |= _BV(BIT_CRCO);
    }
    write_register(REG_CONFIG, config);
}

rf24_crclength_e NRF24::getCRCLength(void)
{
    rf24_crclength_e result = RF24_CRC_DISABLED;
    uint8_t config = read_register(REG_CONFIG)&(_BV(BIT_CRCO)|_BV(BIT_EN_CRC));
    if(config&_BV(BIT_EN_CRC))
    {
        if(config & _BV(BIT_CRCO))result = RF24_CRC_16;
        else result = RF24_CRC_8;
    }
    return result;
}

void NRF24::disableCRC(void)
{
    uint8_t disable = read_register(REG_CONFIG)&(~_BV(BIT_EN_CRC));
    write_register(REG_CONFIG, disable);
}

void NRF24::powerUp(void)
{
    write_register(REG_CONFIG, read_register(REG_CONFIG)|_BV(BIT_PWR_UP));
}

void NRF24::powerDown(void)
{
    write_register(REG_CONFIG, read_register(REG_CONFIG)&(~_BV(BIT_PWR_UP)));
}

void NRF24::startWrite(const uint8_t* buf, uint8_t len)
{
    write_register(REG_CONFIG, (read_register(REG_CONFIG)|_BV(BIT_PWR_UP))&(~_BV(BIT_PRIM_RX)));
    dl->delay_us(150);
    write_payload(buf, len);
    ce(1);
    dl->delay_us(15);
    ce(0);
}

void NRF24::writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
    const uint8_t *current = (uint8_t*)buf;
    uint8_t data_len = MIN(len, MAX_PAYLOAD_SIZE);
    csn(0);
    write_register(CMD_W_ACK_PAYLOAD|(pipe & 0x7), current, data_len);
    csn(1);
}

void NRF24::whatHappened(bool* tx_ok, bool* tx_fail, bool* rx_ready)
{
    uint8_t status = get_status();
    *tx_ok = 0;
    write_register(REG_STATUS, _BV(BIT_RX_DR)|_BV(BIT_TX_DS)|_BV(BIT_MAX_RT));
    *tx_ok = status & _BV(BIT_TX_DS);
    *tx_fail = status & _BV(BIT_MAX_RT);
    *rx_ready = status & _BV(BIT_RX_DR);
}
